# logitechGhubLinux

./: README.md  logitech_plugin.cpp  meson.build
backend/: config.cpp  config.h  hidpp20_device.cpp  hidpp20_device.h  hidpp_constants.h  hidpp_driver.cpp  hidpp_driver.h  logitech_peripherals.cpp  logitech_peripherals.h
